remove the log throw anti-pattern. add a core package to cpo-core so it matches with jdbc and cassandra